# localast

./: .gitignore  CHECK_MCP.sh  CURSOR_SETUP.md  README.md  START_MCP_SERVER.sh  check-mcp-status.sh  cursor-mcp-config.json  fix-and-restart.sh  full-index.sh  install-and-setup.sh  install.sh  kill-all-mcp-servers.sh  mcp-config-example.json  pyproject.toml  quick-start.sh  requirements.txt  setup-python311.sh  setup.sh  start-localast.sh  test-mcp-tools.sh  test_mcp_direct.py  test_mcp_protocol.py  test_mcp_search.py  test_search_parse_file.py  validate_all_tools.py
db/: schema.sql
examples/: prompt_metrics.json  review_policy.json
scripts/: 1-initial-index.sh  2-initial-embedding.sh  3-incremental-index.sh  4-incremental-embedding.sh  5-delete-and-rebuild.sh  README.md  init_db.py
src/localast/: __init__.py  cli.py  config.py
src/localast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/localast/ast/: __init__.py  parser.py
src/localast/config_parser/: __init__.py  parser.py
src/localast/docs/: __init__.py  ingest.py
src/localast/embeddings/: __init__.py  engine.py  index.py
src/localast/git/: __init__.py  history.py
src/localast/graph/: __init__.py  model.py
src/localast/indexer/: __init__.py  pipeline.py
src/localast/mcp/: __init__.py  contracts.py  server.py
src/localast/prompt_lab/: __init__.py  service.py
src/localast/review/: __init__.py  engine.py
src/localast/security/: __init__.py  privacy.py
src/localast/storage/: __init__.py  database.py  repo.py  schema.py
tests/: test_cli_indexing.py  test_schema.py
(+10 files in other folders)
